exercises/k8s/Exercise_08/prometheus-adapter.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: custom-metrics
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-adapter
  namespace: custom-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-adapter
  template:
    metadata:
      labels:
        app: prometheus-adapter
    spec:
      containers:
      - name: prometheus-adapter
        image: directxman12/k8s-prometheus-adapter-amd64:v0.8.4
        volumeMounts:
        - name: config
          mountPath: /etc/adapter
        - name: apiserver-localconfig
          mountPath: /var/run/serving-cert
        args:
        - /adapter
        - --config=/etc/adapter/config.yaml
        - --prometheus-url=http://prometheus.istio-system.svc.cluster.local
        - --tls-cert-file=/var/run/serving-cert/tls.crt
        - --tls-private-key-file=/var/run/serving-cert/tls.key
      volumes:
      - name: config
        configMap:
          name: adapter-config
      - name: apiserver-localconfig
        secret:
          secretName: prometheus-adapter-tls
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-adapter
  namespace: custom-metrics
spec:
  ports:
  - port: 443
    targetPort: 6443
    protocol: TCP
  selector:
    app: prometheus-adapter
